--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,180 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--BackGroundColorValue);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+*{
+  font-family: 'Pretendard-Regular';
+}
+
+/* 텍스트 드레그 했을때 글 배경색 변경 */
+textarea::selection {
+  background-color: #e7ebfd;
+}
+textarea::-moz-selection {
+  background-color: #e7ebfd;
+}
+
+/* input text 포커스시 border제거 */
+input:focus {
+  outline: none;
+}
+textarea:focus {
+  outline: none;
+}
+
+/* html랜더링 css */
+blockquote {
+  margin-left:5px;
+  border-left: 10px solid #b5c1fa !important;
+  padding: 5px 5px 5px 15px;
+  /* background-color : #F8F9FA;
+  color : black; */
+  background-color : inherit !important;
+  color : inherit !important;
+  quotes: "\201C""\201D""\2018""\2019";
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+p {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+ul {
+  list-style-type: disc;
+  margin-left: 20px;
+}
+
+ul li {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+  margin-left: 20px;
+} 
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  line-height: 1;
+}
+
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h4 {
+  display: block;
+  font-size: 1em;
+  margin-top: 1.33em;
+  margin-bottom: 1.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h5 {
+  display: block;
+  font-size: 0.83em;
+  margin-top: 1.67em;
+  margin-bottom: 1.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+h6 {
+  display: block;
+  font-size: 0.67em;
+  margin-top: 2.33em;
+  margin-bottom: 2.33em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+}
+
+
+u {
+  text-decoration: underline;
+}
+
+s {
+  text-decoration: line-through;
+}
+
+hr {
+  width: 100%;
+  height: 3px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #dedede;
+  border: 1px solid #dedede;
+  border-radius: 15px;
+}
+
+.html img {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+a{
+  color: #8e9be3;
+}
+
+/* input::placeholder {
+  padding-left: 10px;
+}
+
+textarea::placeholder {
+  padding-left: 10px;
+} */
+
+textarea,input {
+  padding-left: 10px;
+  padding-right: 10px;
 }
