--- a/src/custom.css
+++ b/src/custom.css
@@ -90,3 +90,32 @@
   .custumShadow{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
   }
+
+  .id{
+    background-image: url('../public/Icon/User.png');
+    background-size: 20px;
+    background-position:  10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
+  .password{
+    background-image: url('../public/Icon/Lock2.png');
+    background-size: 20px;
+    background-position:  10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
+  .passwordCheck{
+    background-image: url('../public/Icon/Lock.png');
+    background-size: 20px;
+    background-position:  10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
+  .email{
+    background-image: url('../public/Icon/Email.png');
+    background-size: 20px;
+    background-position:  10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
