--- a/src/custom.css
+++ b/src/custom.css
@@ -40,6 +40,11 @@
   
   /* 카드 WIDTH, HEIGHT 값 */
   .Card {
+    /* width: 280px; */
+    width: 310px;
+    height: 330px;
+  }
+  .BlogCard {
     width: 280px;
     height: 330px;
   }
@@ -114,6 +119,13 @@
   }
   .email{
     background-image: url('../public/Icon/Email.png');
+    background-size: 20px;
+    background-position:  10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+  }
+  .name{
+    background-image: url('../public/Icon/Name.png');
     background-size: 20px;
     background-position:  10px center;
     background-repeat: no-repeat;
