--- a/src/custom.css
+++ b/src/custom.css
@@ -10,135 +10,139 @@
     }
   }
   
-  @media screen and (max-width: 1300px) {
-    :root {
-      --CenterPaddingValue: 3%;
-    }
+@media screen and (max-width: 1300px) {
+  :root {
+    --CenterPaddingValue: 3%;
   }
-  
-  /* 헤더 크기 */
-  .HeaderHeight {
-    height: var(--HeaderHeightValue);
-    /* background-color: white; */
-  }
-  
-  /* 바디에 헤더크기만큼 패딩-top 주기 */
-  .HeaderPadding {
-    padding-top: var(--HeaderHeightValue);
-  }
-  .HeaderPaddingM {
-    margin-top: var(--HeaderHeightValue);
-  }
-  .blur-background {
-    backdrop-filter: blur(5px);
-  }
+}
 
+.underline-offset-wide {
+  text-underline-offset: 4px; /* 원하는 간격으로 설정 */
+}
   
-  /* 바디 컴 */
-  .CenterPadding {
-    padding-left: var(--CenterPaddingValue);
-    padding-right: var(--CenterPaddingValue);
-  }
-  
-  /*  */
-  .TR_Popup {
-    right: var((--CenterPaddingValue));
-  }
-  
-  /* 카드 WIDTH, HEIGHT 값 */
-  .Card {
-    /* width: 280px; */
-    width: 310px;
-    height: 330px;
-  }
-  .BlogCard {
-    width: 280px;
-    height: 330px;
-  }
-  .TeamBlogCard {
-    width: 310px;
-    height: 355px;
-  }
-  
-  /* 헤더랑 바디 구분하려고 주는 미세하게 흰색보다 어두운색 */
-  .bgc {
-    background-color: #f8f9fa;
-  }
-  
-  /* 테일윈드에 없는 css 구현 */
-  /* 1줄로 자르기 */
-  .line-clamp-1 {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  /* 2줄로 자르기 */
-  .line-clamp-2 {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-  /* 3줄로 자르기 */
-  .line-clamp-3 {
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-  /* 4줄로 자르기 */
-  .line-clamp-4 {
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-  
-  /* 스크롤바 가리기 */
-  .hide-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  .hide-scrollbar {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+/* 헤더 크기 */
+.HeaderHeight {
+  height: var(--HeaderHeightValue);
+  /* background-color: white; */
+}
 
-  .custumShadow{
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-  }
+/* 바디에 헤더크기만큼 패딩-top 주기 */
+.HeaderPadding {
+  padding-top: var(--HeaderHeightValue);
+}
+.HeaderPaddingM {
+  margin-top: var(--HeaderHeightValue);
+}
+.blur-background {
+  backdrop-filter: blur(5px);
+}
 
-  .id{
-    background-image: url('../public/Icon/User.png');
-    background-size: 20px;
-    background-position:  10px center;
-    background-repeat: no-repeat;
-    padding-left: 40px;
-  }
-  .password{
-    background-image: url('../public/Icon/Lock2.png');
-    background-size: 20px;
-    background-position:  10px center;
-    background-repeat: no-repeat;
-    padding-left: 40px;
-  }
-  .passwordCheck{
-    background-image: url('../public/Icon/Lock.png');
-    background-size: 20px;
-    background-position:  10px center;
-    background-repeat: no-repeat;
-    padding-left: 40px;
-  }
-  .email{
-    background-image: url('../public/Icon/Email.png');
-    background-size: 20px;
-    background-position:  10px center;
-    background-repeat: no-repeat;
-    padding-left: 40px;
-  }
-  .name{
-    background-image: url('../public/Icon/Name.png');
-    background-size: 20px;
-    background-position:  10px center;
-    background-repeat: no-repeat;
-    padding-left: 40px;
-  }
+
+/* 바디 컴 */
+.CenterPadding {
+  padding-left: var(--CenterPaddingValue);
+  padding-right: var(--CenterPaddingValue);
+}
+
+/*  */
+.TR_Popup {
+  right: var((--CenterPaddingValue));
+}
+
+/* 카드 WIDTH, HEIGHT 값 */
+.Card {
+  /* width: 280px; */
+  width: 310px;
+  height: 330px;
+}
+.BlogCard {
+  width: 280px;
+  height: 330px;
+}
+.TeamBlogCard {
+  width: 310px;
+  height: 355px;
+}
+
+/* 헤더랑 바디 구분하려고 주는 미세하게 흰색보다 어두운색 */
+.bgc {
+  background-color: #f8f9fa;
+}
+
+/* 테일윈드에 없는 css 구현 */
+/* 1줄로 자르기 */
+.line-clamp-1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+/* 2줄로 자르기 */
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+/* 3줄로 자르기 */
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+/* 4줄로 자르기 */
+.line-clamp-4 {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+/* 스크롤바 가리기 */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.custumShadow{
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
+}
+
+.id{
+  background-image: url('../public/Icon/User.png');
+  background-size: 20px;
+  background-position:  10px center;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+.password{
+  background-image: url('../public/Icon/Lock2.png');
+  background-size: 20px;
+  background-position:  10px center;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+.passwordCheck{
+  background-image: url('../public/Icon/Lock.png');
+  background-size: 20px;
+  background-position:  10px center;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+.email{
+  background-image: url('../public/Icon/Email.png');
+  background-size: 20px;
+  background-position:  10px center;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+.name{
+  background-image: url('../public/Icon/Name.png');
+  background-size: 20px;
+  background-position:  10px center;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
